5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_1806.log
== SUBMITION (2019-03-26 11:44:22) 
-- CODE:
from math import *
n=int(input());
resultado= 1- ((factorial(365))/factorial(365-n))*(1/365**n);
print(round(resultado,2));
-- EXECUTION TIME:
0.140009
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:44:24) 
-- CODE:
from math import *
n=int(input());
resultado= 1- ((factorial(365))/factorial(365-n))*(1/365**n);
print(round(resultado,2));
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:45:08) 
-- CODE:
from math import *
n=int(input());
resultado= 1- ((factorial(365))/factorial(365-n))*(1/365**n);
resultado2=resultado1*100
print(round(resultado2,2));
-- EXECUTION TIME:
0.136951
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1806/main.py", line 4, in <module>
    resultado2=resultado1*100
NameError: name 'resultado1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:45:11) 
-- CODE:
from math import *
n=int(input());
resultado= 1- ((factorial(365))/factorial(365-n))*(1/365**n);
resultado2=resultado1*100
print(round(resultado2,2));
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    resultado2=resultado1*100
NameError: name 'resultado1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:45:24) 
-- CODE:
from math import *
n=int(input());
resultado= 1- ((factorial(365))/factorial(365-n))*(1/365**n);
resultado2=resultado*100
print(round(resultado2,2));
-- EXECUTION TIME:
0.127487
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
